--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ torch-sparse -f https://data.pyg.org/whl/torch-1.10.0+cu113.html
 torch-cluster -f https://data.pyg.org/whl/torch-1.10.0+cu113.html
 torch-spline-conv -f https://data.pyg.org/whl/torch-1.10.0+cu113.html
 torch-geometric -f https://data.pyg.org/whl/torch-1.10.0+cu113.html
+tensorboard
 simplejson
 deap
 mip
